Fixed overflow glitch

--- a/src/components/AdminMobileSlidesComponent/AdminMobileSlidesComponent.css
+++ b/src/components/AdminMobileSlidesComponent/AdminMobileSlidesComponent.css
@@ -2,3 +2,10 @@
   font-weight: bold;
   font-size: 0.9em !important;
 }
+.mobile-main-container {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+  &::-webkit-scrollbar {
+    display: none; /* Chrome, Safari */
+  }
+}
